@@ -578,6 +578,6 @@ advscan \(hyr \(hyp < info.xml > report.txt
 To increase the verbosity of the printed information you
 can add the \(hyv switch.
 .SH COPYRIGHT 
-This file is Copyright (C) 2003, 2004 Andrea Mazzoleni, Filipe Estima
+This file is Copyright (C) 2003, 2004, 2008 Andrea Mazzoleni, Filipe Estima
 .SH SEE ALSO 
 advdiff(1)
