@@ -756,7 +756,7 @@ can add the -v switch.
 <h2><a name="12">12</a> 
 Copyright
 </h2>
-This file is Copyright (C) 2003, 2004 Andrea Mazzoleni, Filipe Estima
+This file is Copyright (C) 2003, 2004, 2008 Andrea Mazzoleni, Filipe Estima
 <h2><a name="13">13</a> 
 See Also
 </h2>
