@@ -6,6 +6,8 @@ advscan \(hy History For AdvanceSCAN
 .IP \(bu
 Fixed the recognition of the XML \(cqinbios\(cq atttribute. It\(cqs an
 important fix if you use the \(cqfilter\(cq feature.
+.IP \(bu
+Fixed support for 64 bits architectures.
 .PD
 .SH ADVANCESCAN VERSION 1.13 2004/12 
 .PD 0
