@@ -12,6 +12,9 @@ AdvanceSCAN Version 1.14 2008/12
 Fixed the recognition of the XML 'inbios' atttribute. It's an
 important fix if you use the 'filter' feature.
 </li>
+<li>
+Fixed support for 64 bits architectures.
+</li>
 </ul>
 <h2> 
 AdvanceSCAN Version 1.13 2004/12
